Record WebSocket endpoint security checks in a stable order
Collectors.toUnmodifiableMap() and Map.copyOf() return JDK immutable maps whose
iteration order is randomized per JVM run. Both maps are recorded into the generated
bytecode, which made integration-tests/oidc-wiremock and oidc-dev-services
non-reproducible. Collect into a HashMap and keep the build item fields
unmodifiable by wrapping rather than copying.